Fixed invisible executionMode text on Chromium with the Colorful Light theme

--- a/themes/colorful_light.css
+++ b/themes/colorful_light.css
@@ -57,6 +57,10 @@
     border-bottom: var(--ui-measure-border-thick) solid #00000040;
 }
 
+#bar select>option {
+    color: black !important;
+}
+
 div.expander {
     color: #ffffff;
     border-width: var(--ui-measure-border-thick);
